welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: not found: value &&
    if (X!=6)&&(dir==0) {
             ^